--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
 			<div class="slides">
 				<section>
 					<h1>Reveal.js</h1>
-					<h3>基于HTML的展现框架</h3>
+					<h3>基于HTML的幻灯片框架</h3>
 					<p>
-						<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
+						<small>创建人 <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
 					</p>
 				</section>
 
 				<section>
-					<h2>Hello There</h2>
+					<h2>你好</h2>
 					<p>
-						reveal.js enables you to create beautiful interactive slide decks using HTML. This presentation will show you examples of what it can do.
+						reveal.js 可以方便你使用HTML制作美观的交互式幻灯片, 这个幻灯片将展示一些你可以做的事情.
 					</p>
 				</section>
 
