垂直幻灯片

--- a/index.html
+++ b/index.html
@@ -58,21 +58,21 @@
 				<!-- Example of nested vertical slides -->
 				<section>
 					<section>
-						<h2>Vertical Slides</h2>
-						<p>Slides can be nested inside of each other.</p>
-						<p>Use the <em>Space</em> key to navigate through all slides.</p>
+						<h2>垂直幻灯片</h2>
+						<p>幻灯片可以嵌入到其他幻灯片里面</p>
+						<p>使用 <em>空格键</em> 来遍历所有幻灯片key to navigate through all slides.</p>
 						<br>
 						<a href="#" class="navigate-down">
 							<img width="178" height="238" data-src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
 						</a>
 					</section>
 					<section>
-						<h2>Basement Level 1</h2>
-						<p>Nested slides are useful for adding additional detail underneath a high level horizontal slide.</p>
+						<h2>地下一层</h2>
+						<p>内嵌幻灯片对于给高层的水平幻灯片补充细节信息比较有用</p>
 					</section>
 					<section>
-						<h2>Basement Level 2</h2>
-						<p>That's it, time to go back up.</p>
+						<h2>地下二层</h2>
+						<p>下到头了,上楼回去吧</p>
 						<br>
 						<a href="#/2">
 							<img width="178" height="238" data-src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Up arrow" style="transform: rotate(180deg); -webkit-transform: rotate(180deg);">
