垂直幻灯片

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<section>
 						<h2>垂直幻灯片</h2>
 						<p>幻灯片可以嵌入到其他幻灯片里面</p>
-						<p>使用 <em>空格键</em> 来遍历所有幻灯片key to navigate through all slides.</p>
+						<p>使用 <em>空格键</em> 来遍历所有幻灯片</p>
 						<br>
 						<a href="#" class="navigate-down">
 							<img width="178" height="238" data-src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
