--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 				</section>
 
 				<section>
-					<h2>Slides</h2>
+					<h2>幻灯片</h2>
 					<p>
-						Not a coder? Not a problem. There's a fully-featured visual editor for authoring these, try it out at <a href="http://slides.com" target="_blank">http://slides.com</a>.
+            不是程序猿? 没关系. 可以使用 <a href="http://slides.com" target="_blank">http://slides.com</a> 来可视化的编辑你的幻灯片
 					</p>
 				</section>
 
