--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
 				</section>
 
 				<section>
-					<h2>Point of View</h2>
+					<h2>概览</h2>
 					<p>
-						Press <strong>ESC</strong> to enter the slide overview.
+            按 <strong>ESC</strong> 键进入概览.
 					</p>
 					<p>
-						Hold down alt and click on any element to zoom in on it using <a href="http://lab.hakim.se/zoom-js">zoom.js</a>. Alt + click anywhere to zoom back out.
+						按住alt点击任何地方来进行缩放
 					</p>
 				</section>
 
