--- a/index.html
+++ b/index.html
@@ -98,25 +98,25 @@
 				</section>
 
 				<section>
-					<h2>Touch Optimized</h2>
+					<h2>触控优化</h2>
 					<p>
-						Presentations look great on touch devices, like mobile phones and tablets. Simply swipe through your slides.
+            幻灯片在触控设备设备上也可以很好地显示和交互,比如手机和平板
 					</p>
 				</section>
 
 				<section data-markdown>
 					<script type="text/template">
-						## Markdown support
+						## 支持Markdown
 
-						Write content using inline or external Markdown.
-						Instructions and more info available in the [readme](https://github.com/hakimel/reveal.js#markdown).
+            可以使用内联或者外联的方式使用Markdown
+            详细内容可以参考 [readme](https://github.com/hakimel/reveal.js#markdown).
 
 						```
 						<section data-markdown>
-						  ## Markdown support
+						  ## 支持Markdown
 
-						  Write content using inline or external Markdown.
-						  Instructions and more info available in the [readme](https://github.com/hakimel/reveal.js#markdown).
+              可以使用内联或者外联的方式使用Markdown
+              详细内容可以参考 [readme](https://github.com/hakimel/reveal.js#markdown).
 						</section>
 						```
 					</script>
