--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
 
 				<section>
 					<section id="fragments">
-						<h2>Fragments</h2>
-						<p>Hit the next arrow...</p>
-						<p class="fragment">... to step through ...</p>
-						<p><span class="fragment">... a</span> <span class="fragment">fragmented</span> <span class="fragment">slide.</span></p>
+						<h2>分段</h2>
+						<p>按下一步的按钮...</p>
+						<p class="fragment">... 再一步 ...</p>
+						<p><span class="fragment">... 一</span> <span class="fragment">小</span> <span class="fragment">步</span></p>
 
 						<aside class="notes">
 							This slide has fragments which are also stepped through in the notes window.
