--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 						<h2>分段</h2>
 						<p>按下一步的按钮...</p>
 						<p class="fragment">... 再一步 ...</p>
-						<p><span class="fragment">... 一</span> <span class="fragment">小</span> <span class="fragment">步</span></p>
+						<p><span class="fragment">... 一</span> <span class="fragment">小</span> <span class="fragment">步...</span></p>
 
 						<aside class="notes">
 							This slide has fragments which are also stepped through in the notes window.
