--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
 						</aside>
 					</section>
 					<section>
-						<h2>Fragment Styles</h2>
-						<p>There's different types of fragments, like:</p>
+						<h2>分段样式</h2>
+						<p>有很多中分段样式, 比如:</p>
 						<p class="fragment grow">grow</p>
 						<p class="fragment shrink">shrink</p>
 						<p class="fragment fade-out">fade-out</p>
