--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
 				</section>
 
 				<section id="transitions">
-					<h2>Transition Styles</h2>
+					<h2>过渡样式</h2>
 					<p>
-						You can select from different transitions, like: <br>
+						你可以选择多种过渡样式,比如: <br>
 						<a href="?transition=none#/transitions">None</a> -
 						<a href="?transition=fade#/transitions">Fade</a> -
 						<a href="?transition=slide#/transitions">Slide</a> -
@@ -161,9 +161,9 @@
 				</section>
 
 				<section id="themes">
-					<h2>Themes</h2>
+					<h2>主题</h2>
 					<p>
-						reveal.js comes with a few themes built in: <br>
+						reveal.js 自带了一些预置主题: <br>
 						<!-- Hacks to swap themes after the page has loaded. Not flexible and only intended for the reveal.js demo deck. -->
 						<a href="#" onclick="document.getElementById('theme').setAttribute('href','css/theme/black.css'); return false;">Black (default)</a> -
 						<a href="#" onclick="document.getElementById('theme').setAttribute('href','css/theme/white.css'); return false;">White</a> -
