--- a/index.html
+++ b/index.html
@@ -315,9 +315,7 @@ function linkify( selector ) {
 
 				<section>
 					<h2>暂停</h2>
-					<p>
-            按B 或 . 键来暂停演讲
-					</p>
+					<p>按B或.键暂停</p>
 				</section>
 
 				<section>
